feat(format): merge palette v2 extends chains
Task 4 of the palette format version 2 plan. An extends chain is folded into
one document before it is linked, $super names what an entry inherited, a
chain that crosses format versions is refused, and an inline palette is read
by the version it declares.

V2Chain folds root-first: palette merges by marker, $defs by name, and a
declared entry replaces what it inherits whole - so an overridden marker
takes its traits with it at no cost, which is what MERGE.008 asks for and
what a Map.put already does. A chain declaring no palette anywhere is
DIAG.002, which is MERGE.007 and makes its fixture run. Bare names resolve
against the merged $defs, which is the whole of MERGE.006.

Two things stay per entry rather than per file, and both are rules, so a
merged entry is a MergedEntry rather than a RawNode: the $imports of the file
that wrote it (REF.086 - an ancestor's own alias must keep working and the
leaf must not inherit it) and the layer it replaced, which $super names
(REF.060). The layer is a MergedEntry in turn, because a three-file chain has
two under the winner and each may write $super of its own.

NodeResolver.entryScope, the seam Task 3 left, now takes that entry and goes
through one new method, ResolutionScope.forEntry, so the two facts cannot be
applied in one place and forgotten in another. An inherited layer is a node
of the reference graph with a key of its own, which is what closes REF.033:
an inherited node referencing the entry that replaced it is a cycle through
$ref and extends together, and it is named with DIAG.032 rather than followed
until the stack ends. The key carries a layer number past the first, without
which a three-file chain reports a cycle it does not have.

Document's $defs were copied with Map.copyOf, whose iteration order is salted
per JVM, and the resolution pass walks them in map order - so a cycle was
named starting from whichever definition the salt chose, where REF.032
requires declara